fix: banner button alignment

--- a/@antv/gatsby-theme-antv/site/components/Banner.module.less
+++ b/@antv/gatsby-theme-antv/site/components/Banner.module.less
@@ -337,9 +337,7 @@
     .text {
       .buttons {
         .videoButtonWrapper {
-          .videoButton {
-            display: none;
-          }
+          display: none;
         }
       }
     }
@@ -380,7 +378,7 @@
         position: absolute;
         left: 0;
         width: 100%;
-        justify-content: flex-end;
+        justify-content: center;
       }
     }
     .teaser {
